--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "*.json": "jsonc",
     "iostream": "cpp",
     "ratio": "cpp"
-  }
+  },
+  "java.format.settings.url": ".vscode/java-formatter.xml"
 }
